--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,6 +144,7 @@ nav div{
 
 .container{
     display: flex;
+    z-index: 10;
 }
 
 .text{
@@ -859,6 +860,117 @@ a{
 .btn-lg{
     padding: 7px 9px !important;
 }
+
+.new-blog-btn{
+    position: fixed;
+    z-index: 100;
+    right: 20px;
+    top: 90px;
+    box-shadow: 0px 0px 4px #444;
+    border-radius: 6px;
+    padding: 5px 6px;
+    font-size: 18px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    background-color: #eee;
+}
+
+.my-60{
+    margin: 60px 0px;
+}
+
+.align-center{
+    align-items: center;
+}
+
+
+.blog-form{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    /*box-shadow: 0px 0px 2px #444; */
+    height: max-content;
+    background-color: #fff;
+    padding-right: 15px;
+    padding-top: 30px;
+}
+
+.input-control, .textarea-control{
+    width: 100%;
+    height: 30px;
+    border-radius: 6px;
+    border: 2px solid #0056b3;
+    transition: all 200ms;
+    padding-left: 10px;
+    font-size: 14px;
+    outline: none;
+    font-family: cursive;
+    margin-bottom: 30px;
+    
+}
+
+.textarea-control{
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 120px;
+    max-height: 180px !important;
+}
+
+.blog-form > div{
+    width: 90%;
+}
+
+.paragraph-form{
+    position: relative;
+    padding-top: 40px;
+    margin-bottom: 30px !important;
+}
+
+.par-nam{
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+
+.btn-delete{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: #dc3545;
+    color: #fff;
+    cursor: pointer;
+}
+.btn-hub-form{
+    display: flex;
+    justify-content: start;
+    width: 81%;
+    margin-top: 30px;
+}
+
+.btn-success , .btn-gray{
+    border: none;
+    padding:5px 7px;
+    border-radius: 6px;
+    margin-right: 10px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    font-family: cursive;
+}
+
+.btn-success{
+    background-color: #218838;
+}
+
+.btn-gray{
+    background-color: #777;
+}
+
 
 @media (max-width:887px){
     .cart{
