--- a/templates/accounts/account.html
+++ b/templates/accounts/account.html
@@ -2,9 +2,9 @@
 {% load my_tags %}
 
 {% block content %}
-<div class="container j-center">
+<div class="container j-center position-relative">
     <div class="container-80 j-center">
-        <div class="countainer">
+        <div class="countainer min-90vh">
             <div class="profile-hub">
                 <div>
                     <img src="{{user_.profile.image.url}}" alt="" class="img-profile-user">
@@ -25,7 +25,7 @@
                         {% endif %}
                     </div>
                     {% else %}
-                        <a href="" class="update-account-btn">Profile <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <a class="update-account-btn">Profile <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
                             </svg>
@@ -34,10 +34,14 @@
                 {% endif %}
                     
             </div>
-            <div style="font-size: 18px; font-family: cursive;margin:20px 0px; font-weight: 800;">Description</div>
-            <div class="user-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus temporibus tenetur quos repellat id similique, adipisci, optio vel ipsa perferendis sunt! Eos corrupti earum doloremque harum! Deleniti voluptatibus voluptas similique ducimus in quod eum necessitatibus, minima, impedit odio excepturi, quos sit eos quia pariatur velit error ratione quas explicabo totam magnam vero maxime dolorem. Fugit consequuntur asperiores quidem enim dignissimos, dolorum eius rerum ipsam, quaerat ex iure quisquam odio eos eaque saepe blanditiis tempora laudantium maxime repellat corporis excepturi, accusantium ducimus possimus voluptatem. Error provident quos, nemo esse atque aliquid dolorem eos quo, voluptatem rem saepe adipisci reprehenderit nesciunt ipsum soluta labore explicabo nobis nisi earum voluptatum odio. Iste asperiores, quo, dicta exercitationem fuga eaque, quis voluptatem nesciunt consectetur animi nulla? Tempora quaerat dolorum sit assumenda? Itaque accusantium autem nobis atque impedit velit quidem ex consequatur unde voluptatibus. Assumenda accusamus facilis doloremque aut voluptatem. Eligendi iusto esse voluptatem suscipit nesciunt numquam ad obcaecati debitis neque temporibus quasi eum in recusandae porro, ea officiis nihil sit consectetur rem nostrum tempore magni. Et corporis sint quasi libero facere eum aspernatur dolorum autem alias ea iure possimus molestiae temporibus ipsa mollitia error saepe beatae necessitatibus placeat, ducimus blanditiis harum tempora vitae atque. Asperiores, laboriosam libero sapiente est delectus, repellat totam, commodi dolores mollitia ipsam qui? Accusantium quibusdam dicta quisquam totam cupiditate sapiente dolor non amet, illo minima doloremque? Cupiditate, quo veniam nostrum optio similique commodi nisi. Expedita quam delectus cupiditate? Quae quasi reprehenderit, saepe id odit debitis at quas, deserunt voluptatem recusandae praesentium aspernatur velit tempora eos, doloremque tempore? Nostrum, pariatur. Odit aliquam facilis eligendi velit ea illum excepturi neque, dolore natus impedit nobis iusto debitis sed qui inventore blanditiis ducimus dicta! Vitae hic soluta sint nemo distinctio commodi magni magnam beatae asperiores fugiat rerum ex natus vero, recusandae illum obcaecati sit veniam?
+            <div style="font-size: 18px; font-family: cursive;margin:20px 0px; font-weight: 800;">Info</div>
+            <div class="user-info-pro">
+                <span>First name : {{user_.first_name}}</span> <span>Last name : {{user_.last_name}}</span> <span>University : {{user_.profile.university}}</span>
             </div>
+            <div style="font-size: 18px; font-family: cursive;margin:20px 0px; font-weight: 800;">Description</div>
+            <p class="user-description">
+               {{user_.profile.description}}
+            </p>
             {% if user_.article_set.all %}
                 <div class="title"><a href="#" class="a-b">Articles<span class="a-t"></span></a></div>
                 <div class="container f-row">
@@ -58,9 +62,100 @@
         </div>
             
     </div>
+    <div class="h-ff"></div>
+    <div class="ff-div">
+        <div class="close-ff-div"></div>
+        <div class="ff-hub">
+            <div class="ff-link ff-link-active follower-link">Followers</div>
+            <div class="ff-link followed-link">Followed</div>
+        </div>
+        <div class="follow-hub follower follow-hub-active">
+            <div>
+                {% for user_follower in user_.follower.all %}
+                    <div class="user-follow">
+                        <a href="{% url 'profile_user' user_follower.follower.username %}"><img src="{{user_follower.follower.profile.image.url}}" alt=""><span>{{user_follower.follower.username}}</span></a>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="follow-hub followed">
+            {% for user_followed in user_.followed.all %}
+                <div>
+                    <div class="user-follow">
+                        <a href="{% url 'profile_user' user_followed.followd.username %}"><img src="{{user_followed.followd.profile.image.url}}" alt=""><span>{{user_followed.followd.username}}</span></a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+    {% if user.username == user_.username %}
+        <div class="menu-user">
+            <div class="close-ff-div close-user-menu"></div>
+            <br><br><br><br>
+            <div class="a-user"><a href="{% url 'account_info' %}">Account Info</a></div>
+            <div class="a-user"><a href="{% url 'user_info' %}">User Info</a></div>
+            <div class="a-user"><a href="{% url 'change_password' %}">Change Password</a></div>
+            <div class="a-user "><a href="#" id="delete-a" class="danger">Delete Account</a></div>
+            <div class="a-user "><a href="{% url 'logout' %}" class="danger">Logout</a></div>
+        </div>
+        <div class="delete-account-div">
+            <div>I wante delete <a href="{% url 'delete_account' %}" class="danger">Account</a> or <a id="no-delete" style="cursor:pointer;" class="success">No</a></div>
+        </div>
+    {% endif %}
+    <br><br><br>
 </div>
-<br><br><br>
+{% if user.username == user_.username %}
+    <script>
+        $(document).on("click","#delete-a",function(e){
+            $(".menu-user").removeClass("ff-div-active");
+            $(".delete-account-div").addClass("delete-account-div-active");
+        });
+
+        $(document).on("click","#no-delete",function(e){
+            $(".delete-account-div").removeClass("delete-account-div-active");
+            $(".h-ff").removeClass("h-ff-active");
+        });
+
+        $(document).on("click",".update-account-btn",function(e){
+            e.preventDefault();
+            $(".h-ff").addClass("h-ff-active");
+            $(".menu-user").addClass("ff-div-active");
+        });
+        
+        $(document).on("click",".close-user-menu",function(e){
+            $(".menu-user").removeClass("ff-div-active");
+            $(".h-ff").removeClass("h-ff-active");
+        });
+    </script>
+{% endif %}
 <script>
+    $(document).on("click",".ffuser",function(e){
+        $(".h-ff").addClass("h-ff-active");
+
+        $(".ff-div").addClass("ff-div-active");
+    });
+
+    $(document).on("click",".close-ff-div",function(e){
+        $(".h-ff").removeClass("h-ff-active");
+        $(".ff-div").removeClass("ff-div-active");
+    });
+
+    $(document).on("click",".follower-link",function(e){
+        $(".followed-link").removeClass("ff-link-active");
+        $(this).addClass("ff-link-active");
+
+        $(".followed").removeClass("follow-hub-active");
+        $(".follower").addClass("follow-hub-active");
+    });
+
+    $(document).on("click",".followed-link",function(e){
+        $(".follower-link").removeClass("ff-link-active");
+        $(this).addClass("ff-link-active");
+
+        $(".follower").removeClass("follow-hub-active");
+        $(".followed").addClass("follow-hub-active");
+    });
+
     $(document).on("click",".follow-btn",function(e){
         e.preventDefault();
         const username = $(this).data("index");
@@ -106,7 +201,7 @@
                 console.log(err);
             }
         })
-    })
+    });
 </script>
 {% endblock content %}
     
