--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -55,8 +55,15 @@
                             <button class="follow-btn btn-lg" data-index="{{article.author.username}}">Follow</button>
                             <button class="unfollow-btn btn-lg hidden" data-index="{{article.author.username}}">Unfollow</button>
                         {% endif %}
+
+                        
                     </div>
-                    
+                    {% if user.username == article.author.username %}
+                            <a href="#" class="update-article-btn">Blog <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                            </svg></a>
+                    {% endif %}
                 </div>
                 <img src="{{article.image.url}}" alt="" class="img-detail">
                 <p class="article-title">{{article.title}}</p>
