--- a/templates/accounts/change-password.html
+++ b/templates/accounts/change-password.html
@@ -7,7 +7,7 @@
                 <div class="container j-center my-60">
                     <p style="font-size: 18px; font-family:cursive; font-weight: 600;">change your password</p>
                 </div>
-                <form action="." method="POST" style="width: 50%; display: flex;flex-direction:column; position: relative; align-items: center;">
+                <form action="." method="POST" style="width: 320px; display: flex;flex-direction:column; position: relative; align-items: center;">
                     {% csrf_token %}
                     <div class="paragraph-form blog-form">
                         {{form}}
