--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -2,9 +2,9 @@
 
 
 {% block content %}
-<div class="container min-90vh">
+<div class="container f-column min-90vh">
 {% if users %}
-    <div class="title"><a href="#" class="a-b">Pupolear Author<span class="a-t"></span></a></div>
+    <div class="title"><a href="#" class="a-b">Author result<span class="a-t"></span></a></div>
         <div class="swiper user-carts">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
